# vck190-pcie-trd

./: .gitmodules  Makefile  README.md  index.html
2022.2/doctrees/: arch.doctree  build.doctree  environment.pickle  index.doctree  intro.doctree  known-issues.doctree  revision.doctree  run.doctree  support.doctree
2022.2/doctrees/arch/: arch-filter2d.doctree  arch-hw.doctree  arch-sw.doctree  arch-xvdpu.doctree
2022.2/doctrees/run/: run-dashboard.doctree  run-filter2d.doctree  run-setup.doctree  run-xvdpu.doctree
2022.2/html/: .buildinfo  arch.html  build.html  genindex.html  index.html  intro.html  known-issues.html  objects.inv  revision.html  run.html  search.html  searchindex.js  support.html
2022.2/html/_sources/: index.rst.txt  revision.rst.txt  run.rst.txt  support.rst.txt
2022.2/html/arch/: arch-filter2d.html  arch-hw.html  arch-sw.html  arch-xvdpu.html
2022.2/html/run/: run-dashboard.html  run-filter2d.html  run-setup.html  run-xvdpu.html
docs/: Makefile  index.html
docs/source/: conf.py  intro.rst  known-issues.rst
docs/source/arch/: arch-sw.rst
docs/source/images/: Thumbs.db
docs/source/run/: run-dashboard.rst  run-filter2d.rst  run-setup.rst
docs/source/tables/: filters.csv  (+3 more)
overlays/xvdpu/: README.md
overlays/xvdpu/apps/smart-mipi-app/smart-mipi-app/: CMakeLists.txt  LICENSE
overlays/xvdpu/apps/smart-mipi-app/smart-mipi-app/config/: image_processing.cfg
overlays/xvdpu/apps/smart-mipi-app/smart-mipi-app/config/facedetect/: aiinference.json  drawresult.json  preprocess.json
overlays/xvdpu/apps/smart-mipi-app/smart-mipi-app/config/refinedet/: aiinference.json
overlays/xvdpu/apps/smart-mipi-app/smart-mipi-app/config/ssd/: aiinference.json  drawresult.json
overlays/xvdpu/apps/smart-mipi-app/smart-mipi-app/config/yolov3/: aiinference.json
overlays/xvdpu/apps/smart-mipi-app/smart-mipi-app/src/: main.cpp
petalinux/: Makefile
petalinux/xilinx-vck190-pcie-trd/: Makefile  README  trd-pl-cfg
(+92 files in other folders)
